--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,25 @@
+*{
+	margin:0;
+    box-sizing:border-box;
+}
 
+.holder{
+	display:flex;
+	justify-content:space-between;
+	flex-wrap:wrap;
+	height:100vh;
+	width:100vw;
+	background-color:yellow;
+	flex-direction:row;
+	align-item:center;
+	color:white;
+	
+}
+
+.item{
+	height:10rem;
+	width:10rem;
+	background-color:black;
+	
+}
 /* Your CSS Code here. */
